--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -299,7 +299,7 @@
       </div>
       <div class="row-fluid">
         <div class="span12">
-          <h1>Ready to order awesome new service!?</h1>
+          <h1>Are you ready to start saving money?</h1>
           <h3>Just give us a call at; (602)531-7375</h3>
           <h3>We are here to help in any way we can.</h3>
         </div>
